# clash-verge-service

./: Cargo.toml
scripts/: verify-legacy-service.mjs
src/: install.rs  uninstall.rs
src/service/: mod.rs  web.rs
