[package]
name = "clash-verge-legacy-service"
version = "1.1.2-legacy.1"
edition = "2021"
authors = ["zzzgydi", "Clash Verge Rev Team"]
license = "GPL-3.0"
repository = "https://github.com/xqd922/clash-verge-service.git"

[[bin]]
name = "clash-verge-service"
path = "src/main.rs"

[[bin]]
name = "install-service"
path = "src/install.rs"

[[bin]]
name = "uninstall-service"
path = "src/uninstall.rs"

[dependencies]
warp = "0.3"
anyhow = "1.0"
log = "0.4"
log4rs = "1.3"
once_cell = "1.19"
serde_json = "1.0"
parking_lot = "0.12"
windows-service = "0.7.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30.12"

[target.'cfg(target_os = "linux")'.dependencies]
openssl ={ version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
